// Copyright 2017 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a Apache
// license that can be found in the LICENSE file.

syntax = "proto3";

package spec;

import "google/protobuf/timestamp.proto";

import "types.proto";

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/nic/index.html
// ----------------------------------------------------------------------------

message NicServiceProperties {
	string zone = 1;
}

service NicService {
	rpc CreateNics(CreateNicsInput) returns (CreateNicsOutput);
	rpc DescribeNics(DescribeNicsInput) returns (DescribeNicsOutput);
	rpc AttachNics(AttachNicsInput) returns (AttachNicsOutput);
	rpc DetachNics(DetachNicsInput) returns (DetachNicsOutput);
	rpc ModifyNicAttributes(ModifyNicAttributesInput) returns (ModifyNicAttributesOutput);
	rpc DeleteNics(DeleteNicsInput) returns (DeleteNicsOutput);
}

// ----------------------------------------------------------------------------

message CreateNicsInput {
	//
}
message CreateNicsOutput {
	//
}

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/nic/describe_nics.html
// ----------------------------------------------------------------------------

message DescribeNicsInput {
	repeated string instances = 1;
	int32 limit = 2;
	string nic_name = 3;
	repeated string nics = 4;
	int32 offset = 5;
	string status = 6;
	int32 vxnet_type = 7;
	repeated string vxnets = 8;
}
message DescribeNicsOutput {
	string message = 1;
	string action = 2;
	repeated NIC nic_set = 3;
	int32 ret_code = 4;
	int32 total_count = 5;
}

// 忽略 不支持的 成员

message NIC {
	google.protobuf.Timestamp create_time = 1;
	string instance_id = 2;
	string nic_id = 3;
	string nic_name = 4;
	string owner = 5;
	string private_ip = 6;
	int32 role = 7;
	string root_user_id = 8;
	string security_group = 9;
	int32 sequence = 10;
	string status = 11;
	google.protobuf.Timestamp status_time = 12;
	repeated Tag tags = 13;
	string vxnet_id = 14;
	EIP eip = 15;
	string transition_status = 16;
	string controller = 17;
	int32 vxnet_type = 18;
	string console_id = 19;
	string resource_id = 20;
}

// ----------------------------------------------------------------------------

message AttachNicsInput {
	//
}

message AttachNicsOutput {
	//
}

// ----------------------------------------------------------------------------

message DetachNicsInput {
	//
}
message DetachNicsOutput {
	//
}

// ----------------------------------------------------------------------------

message ModifyNicAttributesInput {
	//
}
message ModifyNicAttributesOutput {
	//
}

// ----------------------------------------------------------------------------

message DeleteNicsInput {
	//
}

message DeleteNicsOutput {
	//
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
